--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a Node.js project that provides an endpoint to process the Package#0 Header specified in 7.1.1.1 of the OMA-TS-DM Protocol.  When the endpoint receives a POST request containing that binary package, it should respond with a 200 status and a body containing json indicating the version and option count values. The response should look similar to this:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp",
+    "lint": "gulp lint",
+    "start": "gulp run:server"
   },
   "author": "barlowm@gmail.com",
   "license": "MIT",
